--- a/packages/websites/coffeekraken-io/src/css/index.css
+++ b/packages/websites/coffeekraken-io/src/css/index.css
@@ -16,9 +16,9 @@
   fa:th:return
   fa:search:search
   fa:radiation:nothing
+  fa:download:import
   fab:vuejs:vuejs
   fs:src/icons/vuejs.svg:vue
-  fs:src/icons/copy.svg:copyS
 );
 
 @sugar.platform.classes;
