--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
@@ -65,11 +65,11 @@
   }
   .__contents {
     position: relative;
-    top: -66px;
+    /* top: -66px; */
 
-    & > *:not(.active) {
+    /* & > *:not(.active) {
       display: none;
-    }
+    } */
   }
 
   .__illustration {
@@ -78,7 +78,15 @@
     transform: translate(-15%, -15%);
   }
 
-  #features-development {
+  .__webcomponents-grid {
+    @sugar.layout.grid(
+      1 2 3 4 5
+      6 7 8 9 10
+    , $gutter: 20, $gutterBetween: true);
+  };
+
+  #features-development,
+  #features-webcomponents {
     position: relative;
 
     img {
@@ -90,13 +98,35 @@
       display: block;
       position: absolute;
       top: 0;
-      left: 50%;
-      width: 50vw;
+      left: calc(50% + 100px);
+      width: calc(50vw + 100px);
       height: 100%;
       z-index: -1;
       transform: translateX(-100%);
       @sugar.gradient (sugar.color(accent), #D27F01, $angle: 90);
-      clip-path: polygon(0% 0%, 100% 0, calc(100% - 200px) 100%, 0% 100%);
+      clip-path: polygon(-0 0%, 100% 0, calc(100% - 200px) 100%, 0% 100%);
+    }
+  }
+
+  #features-frontend,
+  #features-sugar {
+    position: relative;
+
+    img {
+      max-width: 100%;
+    }
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: calc(50% - 100px);
+      width: calc(50vw + 100px);
+      height: 100%;
+      z-index: -1;
+      @sugar.gradient (sugar.color(complementary, gradientStart), sugar.color(complementary, gradientEnd), $angle: 90);
+      clip-path: polygon(0 0%, 100% 0, 100% 100%, 200px 100%);
     }
   }
 }
