--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
@@ -78,6 +78,13 @@
     transform: translate(-15%, -15%);
   }
 
+  .__recipes-grid {
+    @sugar.layout.grid(
+      1 2 3 4
+      5 6 7 8
+    , $gutter: 20, $gutterBetween: true);
+  };
+
   .__webcomponents-grid {
     @sugar.layout.grid(
       1 2 3 4 5
