--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
@@ -100,18 +100,26 @@
       max-width: 100%;
     }
 
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0; left: calc(50%);
+      width: 50vw; height: 1px;
+      @sugar.gradient (sugar.color(complementary, --lighten 40), rgba(0,0,0,0), $angle: -90);
+    }
     &:before {
       content: '';
       display: block;
       position: absolute;
       top: 0;
-      left: calc(50% + 100px);
+      left: calc(50% - 100px);
       width: calc(50vw + 100px);
       height: 100%;
       z-index: -1;
-      transform: translateX(-100%);
-      @sugar.gradient (sugar.color(accent), #D27F01, $angle: 90);
-      clip-path: polygon(-0 0%, 100% 0, calc(100% - 200px) 100%, 0% 100%);
+      /* @sugar.gradient (sugar.color(complementary, gradientStart), sugar.color(complementary, gradientEnd), $angle: 90); */
+      @sugar.gradient(rgba(0,0,0,0), rgba(0,0,0,.01), $angle: 90);
+      clip-path: polygon(0 0%, 100% 0, 100% 100%, 200px 100%);
     }
   }
 
@@ -123,17 +131,29 @@
       max-width: 100%;
     }
 
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0; left: 50%;
+      transform: translate(-100%);
+      width: 100vw; height: 1px;
+      @sugar.gradient (sugar.color(accent, --lighten 30), rgba(0,0,0,0), $angle: 90);
+    }
     &:before {
       content: '';
       display: block;
       position: absolute;
       top: 0;
-      left: calc(50% - 100px);
+      left: calc(50% + 100px);
       width: calc(50vw + 100px);
       height: 100%;
       z-index: -1;
-      @sugar.gradient (sugar.color(complementary, gradientStart), sugar.color(complementary, gradientEnd), $angle: 90);
-      clip-path: polygon(0 0%, 100% 0, 100% 100%, 200px 100%);
+      transform: translateX(-100%);
+      /* @sugar.gradient (sugar.color(accent), #D27F01, $angle: 90); */
+      @sugar.gradient(rgba(0,0,0,.01), rgba(0,0,0,0), $angle: 90);
+      clip-path: polygon(-0 0%, 100% 0, calc(100% - 200px) 100%, 0% 100%);
     }
+    
   }
 }
