--- a/packages/websites/coffeekraken-io/src/views/pages/doc/doc.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/doc/doc.css
@@ -2,7 +2,7 @@
 
     [class^="s-platform"] {
         font-size: sugar.font.size(70);
-        margin-right: sugar.space(10);
+        margin-right: 0.2em;
     }
 
     .s-avatar {
@@ -36,6 +36,7 @@
             height: 100%;
             background: sugar.color(ui, surface);
             clip-path: polygon(100px 0%, 100% 0, 100% 100%, 0% 100%);
+            z-index: -1;
         }
         
         /* &:after {
