--- a/packages/components/s-code-example-component/index.html
+++ b/packages/components/s-code-example-component/index.html
@@ -8,18 +8,20 @@
   </head>
   <body>
     <script type="module" defer src="/src/js/index.ts"></script>
-    <s-code-example default-style>
-      <template lang="js">
-        import __SClass from '@coffeekraken/s-class'; import __deepMerge from
-        '@coffeekraken/sugar/shared/object/deepMerge'; import __SInterface from
-        '@coffeekraken/s-interface'; import __mustache from 'mustache'; import
-        __stylesheetToString from '@coffeekraken/sugar/js/css/stylesheetToString';
-        export default SSVelteComponent;
-      </template>
-      <template lang="html">
-        <h1>Something cool</h1>
-        <p>iwfj wioef oiw efjoijw oiefjw ioefjwiofj oij</p>
-      </template>
+    <s-code-example>
+      <div slot="default">
+        <div lang="js">
+          import __SClass from '@coffeekraken/s-class'; import __deepMerge from
+          '@coffeekraken/sugar/shared/object/deepMerge'; import __SInterface from
+          '@coffeekraken/s-interface'; import __mustache from 'mustache'; import
+          __stylesheetToString from '@coffeekraken/sugar/js/css/stylesheetToString';
+          export default SSVelteComponent;
+        </div>
+        <template lang="html">
+          <h1>Something cool</h1>
+          <p>iwfj wioef oiw efjoijw oiefjw ioefjwiofj oij</p>
+        </template>
+      </div>
     </s-code-example>
   </body>
 </html>
