--- a/packages/websites/coffeekraken-io/src/css/index.css
+++ b/packages/websites/coffeekraken-io/src/css/index.css
@@ -11,6 +11,19 @@
   @sugar.classes;
 } */
 
+s-code-example {
+  opacity: 0;
+  transition: all .2s ease-out;
+  /* display: block;
+  min-height: 50px;
+  max-height: 50px;
+  overflow: hidden; */
+
+  &[s-mounted] {
+    opacity: 1;
+  }
+}
+
 @sugar.icon.classes(
   fa:user:user
   fa:heart:heart
